--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "dotenv": "^10.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
