--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "ejs": "^3.1.6",
-    "es6-crawler-detect": "^3.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "isbot": "^3.0.26"
   }
 }
